frontend/src/app/globals.css
/* ... */
[data-theme="light"] .widget-bg {
  background-image: linear-gradient(
    180deg,
    #f8fcff 0%,
    #f1efff 50%,
    #f8dcff 100%
  );
}

[data-theme="dark"] .widget-bg {
  background: rgba(255, 255, 255, 0.1);
}

@utility custom-scrollbar {
  &::-webkit-scrollbar {
    @apply w-4.5;
  }

  &::-webkit-scrollbar-track {
    @apply rounded-full;
  }

  &::-webkit-scrollbar-thumb {
    @apply bg-gray-200 border-[0.35rem] border-transparent bg-clip-padding rounded-full;
  }

  [data-theme="dark"] &::-webkit-scrollbar-thumb {
    @apply bg-gray-700;
  }
}

@media (min-width: 1024px) {
  .nav-item:hover .dropdown-menu {
    display: block;
  }

  .nav-item:hover .dropdown-arrow {
    transform: rotate(180deg);
  }
}

.gradient-border {
  position: relative;
  background-clip: padding-box;
  border: 1.5px solid transparent;
}

.gradient-border::before {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: -1.4px;
  border-radius: inherit;
  background: linear-gradient(
    to right,
    rgba(255, 87, 213, 0.5),
    rgba(78, 110, 255, 0.5)
  );
  z-index: -1;
}

.dark .gradient-border::before {
  z-index: 5;
}

[x-cloak] {
  display: none !important;
}

[data-theme="light"] .white-gradient {
  background-image: linear-gradient(
    180deg,
    rgba(255, 255, 255, 0) 0%,
    #fff 44.75%
  );
}

[data-theme="dark"] .white-gradient {
  background-image: linear-gradient(
    180deg,
    rgba(23, 31, 46, 0) 0%,
    #171f2e 44.75%
  );
}

.gradient-btn {
  background-image: linear-gradient(
    97deg,
    var(--color-primary-600) 0%,
    var(--color-primary-300) 140.21%
  );
  color: white;
  background-size: 200% auto;
  background-position: 0% center;
  transition:
    background-position 0.6s ease-in-out,
    transform 0.3s ease;
  will-change: background-position, transform;
}

.gradient-btn:hover {
  background-image: linear-gradient(
    97deg,
    var(--color-primary-300) 0%,
    var(--color-primary-600) 140.21%
  );
  background-position: 100% center;
}

.floating {
  animation: float 3s ease-in-out infinite;
}

.history-item {
  position: relative;
  height: 40px;
  mask-image: linear-gradient(
    90deg,
    #000,
    #000 84%,
    transparent 89%,
    transparent
  );
}

.history-item:hover {
  mask-image: none;
}

@keyframes float {
  0% {
    transform: translateY(0px);
  }
  50% {
    transform: translateY(-10px);
  }
  100% {
    transform: translateY(0px);
  }
}

@keyframes float-y {
  0%,
  100% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-10px);
  }
}

@keyframes float-x {
  0%,
  100% {
    transform: translateX(0);
  }
  50% {
    transform: translateX(10px);
  }
}

@keyframes float-xy {
  0%,
  100% {
    transform: translate(0, 0);
  }
  50% {
    transform: translate(10px, -10px);
  }
}

@keyframes float-rev {
  0%,
  100% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(8px);
  }
}

.floating-1 {
  animation: float-y 3s ease-in-out infinite;
}

.floating-2 {
  animation: float-x 4s ease-in-out infinite;
}

.floating-3 {
  animation: float-xy 5s ease-in-out infinite;
}

.floating-4 {
  animation: float-rev 6s ease-in-out infinite;
}
/* ... */

